force-app/main/default/objects/CIBE_RelaccionadoCita__c/CIBE_RelaccionadoCita__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado para unificar todas las relacciones del objeto Cita (Event) - Contacto, Tarea y Producto</description>
    <label>Relaccionado Cita</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Nombre de Relaccionado cita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relaccionados Cita</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>