force-app/main/default/objects/CIBE_RelaccionadoCita__c/fields/CIBE_Account__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar los clientes del grupo con la cita</description>
    <label>Cliente relacionado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente, Cliente Particular</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relaccionados Cita</relationshipLabel>
    <relationshipName>Relaccionados_Cita</relationshipName>
    <type>Lookup</type>
</CustomField>