force-app/main/default/objects/CIBE_RelaccionadoCita__c/fields/CIBE_CitaRelaccionada__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CitaRelaccionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cita relaccionada</label>
    <referenceTo>AV_HeaderCustomActivity__c</referenceTo>
    <relationshipName>Citas_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>