force-app/main/default/objects/CIBE_RelaccionadoCita__c/fields/CIBE_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto relaccionado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relaccionados Cita</relationshipLabel>
    <relationshipName>Relaccionados_Cita</relationshipName>
    <type>Lookup</type>
</CustomField>