force-app/main/default/objects/CIBE_RelaccionadoCita__c/fields/CIBE_GrupoComercial__c.field-meta.xml
<CustomField>
    <fullName>CIBE_GrupoComercial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupo Comercial</label>
    <type>TextArea</type>
</CustomField>