force-app/main/default/objects/CIBE_RelaccionadoCita__c/fields/CIBE_IsMain__c.field-meta.xml
<CustomField>
    <fullName>CIBE_IsMain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Main</label>
    <type>Checkbox</type>
</CustomField>