force-app/main/default/objects/CIBE_RelaccionadoCita__c/fields/CIBE_Producto__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto relaccionado</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Citas_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>