force-app/main/default/objects/CIBE_RelaccionadoCita__c/fields/CIBE_RelationId__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RelationId__c</fullName>
    <formula>CASESAFEID(CIBE_Contacto__r.AV_UsuarioAsociado__c)</formula>
    <label>RelationId</label>
    <type>Text</type>
</CustomField>