force-app/main/default/objects/CIBE_RelaccionadoCita__c/fields/CIBE_TareaRelaccionada__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TareaRelaccionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarea relaccionada</label>
    <referenceTo>AV_HeaderCustomActivity__c</referenceTo>
    <relationshipName>Citas_Productos1</relationshipName>
    <type>Lookup</type>
</CustomField>